@startuml

title __SERVICE's Class Diagram__\n

  namespace com.musicplayer {
    namespace service {
      class com.musicplayer.service.PlaybackService {
          - currentQueue : List<Track>
          - currentTime : int
          - currentTrackIndex : int
          - duration : int
          - loopEnabled : boolean
          - playing : boolean
          + PlaybackService()
          + advanceOneSecond()
          + getCurrentQueue()
          + getCurrentTime()
          + getCurrentTrack()
          + getCurrentTrackIndex()
          + getDuration()
          + isLoopEnabled()
          + isPlaying()
          + nextTrack()
          + pauseTrack()
          + playTrack()
          + previousTrack()
          + resetTrack()
          + resumeTrack()
          + setCurrentQueue()
          + setCurrentTime()
          + setLoopEnabled()
          + shuffleRemainingQueue()
          + stopTrack()
          - parseDuration()
      }
    }
  }
  

  namespace com.musicplayer {
    namespace service {
      class com.musicplayer.service.PlaylistService {
          - pendingDeletedPlaylistIndex : int
          - pendingDeletedTrackPlaylistIndexes : Map<Playlist, Integer>
          + addTrackToPlaylist()
          + clearPendingDeletedPlaylist()
          + clearPendingDeletedTrackFromPlaylists()
          + createPlaylist()
          + deletePlaylist()
          + generatePlaylistByGenre()
          + generatePlaylistByTag()
          + generatePlaylistByYear()
          + getPendingDeletedPlaylist()
          + hasPendingDeletedPlaylist()
          + moveTrackInPlaylist()
          + refreshSmartPlaylists()
          + removeTrackFromPlaylist()
          + renamePlaylist()
          + restorePendingDeletedPlaylist()
          + restorePendingDeletedTrackInPlaylists()
          + softDeletePlaylist()
          + softDeleteTrackFromPlaylists()
          + validateTrackAdditionSelection()
          + validateTrackRemovalSelection()
      }
    }
  }
  

  namespace com.musicplayer {
    namespace service {
      class com.musicplayer.service.SearchService {
          + matchesPlaylist()
          + matchesTrack()
          + searchPlaylists()
          + searchTracks()
          - normalize()
      }
    }
  }
  

  namespace com.musicplayer {
    namespace service {
      class com.musicplayer.service.TrackService {
          - pendingDeletedTrackIndex : int
          + addTrack()
          + clearPendingDeletedTrack()
          + createTrack()
          + getPendingDeletedTrack()
          + getPendingDeletedTrackIndex()
          + getTopPlayedTracks()
          + hasPendingDeletedTrack()
          + removeTrack()
          + restorePendingDeletedTrack()
          + softDeleteTrack()
          + updateEditableFields()
          - parseAndValidateYear()
          - validateLength()
          - validateTextField()
      }
    }
  }
  

  com.musicplayer.service.PlaybackService o-- com.musicplayer.model.Track : currentTrack
  com.musicplayer.service.PlaylistService o-- com.musicplayer.model.Playlist : pendingDeletedPlaylist
  com.musicplayer.service.TrackService o-- com.musicplayer.model.Track : pendingDeletedTrack


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
